--- a/BusStationSystem/BusStationSystem.csproj
+++ b/BusStationSystem/BusStationSystem.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\BusStationSystem.DAL\BusStationSystem.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Controllers\Properties\launchSettings.json">
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
