Added tone of functionality: refacor director cabinet

--- a/BusStationSystem/BusStationSystem.csproj
+++ b/BusStationSystem/BusStationSystem.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\BusStationSystem.DAL\BusStationSystem.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Infrastructure\" />
+  </ItemGroup>
+
 </Project>
